gitignore from lein2.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-build
-classes
-lib
+/target
+/lib
+/classes
+/checkouts
+pom.xml
+*.jar
+*.class
+.lein-deps-sum
+.lein-failures
+.lein-plugins
 *.keystore
 .DS_Store
-vars.sh
-localvars.sh
-/.lein-deps-sum
